Added a bunch of JUnit test cases for the XsbDataService class.